--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,13 @@
     "ecmaVersion": 6,
     "sourceType": "module"
   },
-  "extends": "eslint:recommended",
+  "plugins": [
+    "mocha"
+  ],
+  "extends": [
+    "eslint:recommended",
+    "airbnb-base"
+  ],
   "env": {
     "mocha": true,
     "node":  true,
@@ -13,6 +19,7 @@
   "rules": {
     "comma-dangle": 0,
     "arrow-body-style": ["error", "always"],
-    "strict": [0, "global"]
+    "strict": [0, "global"],
+    "mocha/no-exclusive-tests": "error"
   }
 }
