--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "openweather",
     "api"
   ],
-  "version": "2.0.0",
+  "version": "2.1.0",
   "author": {
     "name": "Steven Collins",
     "email": "steven@carboncollins.uk",
@@ -52,6 +52,7 @@
   ],
   "readmeFilename": "README.md",
   "dependencies": {
+    "moment": "^2.20.1",
     "request": "^2.83.0",
     "request-promise-native": "^1.0.5"
   },
