--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   ],
   "readmeFilename": "README.md",
   "dependencies": {
+    "diff": "^3.4.0",
     "moment": "^2.20.1",
     "request": "^2.83.0",
     "request-promise-native": "^1.0.5"
